Connected with jcenter

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath 'com.google.gms:google-services:3.1.0'
         classpath 'me.tatarka:gradle-retrolambda:3.7.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +21,13 @@ allprojects {
         jcenter()
     }
 }
+
+subprojects {
+    tasks.withType(Javadoc).all {
+        enabled = false
+    }
+}
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
