--- a/respiration/build.gradle
+++ b/respiration/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.jfrog.bintray'
+//apply plugin: 'com.jfrog.bintray'
 
 android {
     compileSdkVersion 25
@@ -25,6 +25,30 @@ android {
     }
 }
 
+ext {
+    bintrayRepo = 'Respiration'
+    bintrayName = 'Respiration'
+
+    publishedGroupId = 'com.link184'
+    libraryName = 'Respiration'
+    artifact = 'Respiration'
+
+    libraryDescription = 'Simple way to subscribe to firebase database by rxJava patterns.'
+
+    siteUrl = 'https://github.com/Link184/Respiration'
+    gitUrl = 'https://github.com/Link184/Respiration.git'
+
+    libraryVersion = '0.1.0'
+
+    developerId = 'link184'
+    developerName = 'Eugeniu Tufar'
+    developerEmail = 'eugeniu.tufar@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -43,3 +67,6 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.google.android.gms:play-services-auth:11.0.2'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
