Added annotation processor basics

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -45,7 +45,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    compile project(':respiration')
+    implementation project(':respiration')
+    annotationProcessor project(':respiration-annotation')
 }
 
 apply plugin: 'com.google.gms.google-services'
