--- a/respiration-processor/build.gradle
+++ b/respiration-processor/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.auto.service:auto-service:+'
+    compile 'com.squareup:javapoet:1.9.0'
     implementation project(':respiration-annotation')
 }
 
