--- a/respiration/build.gradle
+++ b/respiration/build.gradle
@@ -48,6 +48,7 @@ ext {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    api project(':respiration-annotation')
 
     // Rx
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
