--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':respiration', ':sample', ':respiration-annotation', ':respiration-processor'
+include ':respiration', ':sample', ':respiration-annotation', ':respiration-compiler'
