--- a/respiration-annotations/build.gradle
+++ b/respiration-annotations/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'java-library'
 
-
 ext {
     bintrayRepo = 'Respiration'
-    bintrayName = 'Compiler'
+    bintrayName = 'Annotations'
 
     publishedGroupId = 'com.link184'
-    libraryName = 'RespirationCompiler'
-    artifact = 'respiration-compiler'
+    libraryName = 'RespirationAnnotations'
+    artifact = 'respiration-annotations'
 
     libraryDescription = 'Simple way to subscribe to firebase database by rxJava patterns.'
 
@@ -27,13 +26,11 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.auto.service:auto-service:+'
-    compile 'com.squareup:javapoet:1.9.0'
-    implementation project(':respiration-annotations')
 }
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
+
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
