--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.github.ben-manes.versions'
 
 buildscript {
+    ext {
+        libraryVersion = '0.4.9'
+    }
+
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-allprojects {
+subprojects {
     repositories {
         jcenter()
         google()
     }
-}
 
-subprojects {
     tasks.withType(Javadoc).all {
         enabled = false
     }
 }
-
 
 task clean(type: Delete) {
     delete rootProject.buildDir
