--- a/respiration-compiler/build.gradle
+++ b/respiration-compiler/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java-library'
-
+apply plugin: 'maven-publish'
 
 ext {
     bintrayRepo = 'Respiration'
@@ -14,7 +14,7 @@ ext {
     siteUrl = 'https://github.com/Link184/Respiration'
     gitUrl = 'https://github.com/Link184/Respiration.git'
 
-    libraryVersion = '0.0.1'
+    libraryVersion = '0.4.9'
 
     developerId = 'link184'
     developerName = 'Eugeniu Tufar'
@@ -27,13 +27,37 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.auto.service:auto-service:+'
-    compile 'com.squareup:javapoet:1.9.0'
-    implementation project(':respiration-annotations')
+    compile "com.link184:respiration-annotations:0.4.9"
+    compileOnly 'com.google.auto.service:auto-service:+'
+    api 'com.squareup:javapoet:1.9.0'
+}
+
+publishing {
+    publications {
+        releasePublication(MavenPublication) {
+            groupId publishedGroupId
+            artifactId artifact
+            version libraryVersion
+            artifact file("${rootDir}/respiration-compiler/build/libs/respiration-compiler-${libraryVersion}.jar")
+            artifact sourcesJar
+            artifact javadocJar
+
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+
+                configurations.compile.allDependencies.each {
+                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('groupId', it.group)
+                    dependencyNode.appendNode('artifactId', it.name)
+                    dependencyNode.appendNode('version', it.version)
+                }
+            }
+        }
+    }
 }
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+apply from: '../bintrayv1.gradle'
