--- a/respiration/build.gradle
+++ b/respiration/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 27
@@ -35,7 +36,7 @@ ext {
     siteUrl = 'https://github.com/Link184/Respiration'
     gitUrl = 'https://github.com/Link184/Respiration.git'
 
-    libraryVersion = '0.4.6'
+    libraryVersion = '0.4.9'
 
     developerId = 'link184'
     developerName = 'Eugeniu Tufar'
@@ -46,9 +47,9 @@ ext {
     allLicenses = ["Apache-2.0"]
 }
 
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    api project(':respiration-annotations')
+    compile("com.link184:respiration-annotations:0.4.9")
 
     // Rx
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -62,5 +63,30 @@ dependencies {
     api 'com.google.android.gms:play-services-auth:11.6.0'
 }
 
+publishing {
+    publications {
+        releasePublication(MavenPublication) {
+            groupId publishedGroupId
+            artifactId artifact
+            version libraryVersion
+            artifact file("${rootDir}/respiration/build/outputs/aar/respiration-release.aar")
+            artifact sourcesJar
+            artifact javadocJar
+
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+
+                configurations.compile.allDependencies.each {
+                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('groupId', it.group)
+                    dependencyNode.appendNode('artifactId', it.name)
+                    dependencyNode.appendNode('version', it.version)
+                }
+            }
+        }
+    }
+}
+
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+apply from: '../bintrayv1.gradle'
+
