--- a/respiration-compiler/build.gradle
+++ b/respiration-compiler/build.gradle
@@ -27,7 +27,8 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.link184:respiration-annotations:0.4.9"
+//    compile "com.link184:respiration-annotations:${libraryVersion}"
+    api project(':respiration-annotations')
     compileOnly 'com.google.auto.service:auto-service:+'
     api 'com.squareup:javapoet:1.9.0'
 }
