--- a/respiration/build.gradle
+++ b/respiration/build.gradle
@@ -15,6 +15,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            debuggable true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 
     compileOptions {
@@ -49,7 +54,9 @@ ext {
 
 
 dependencies {
-    compile("com.link184:respiration-annotations:0.4.9")
+//    compile("com.link184:respiration-annotations:${libraryVersion}")
+    releaseApi project(':respiration-annotations')
+    debugApi project(':respiration-annotations')
 
     // Rx
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
