--- a/respiration-annotations/build.gradle
+++ b/respiration-annotations/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java-library'
+apply plugin: 'maven-publish'
 
 ext {
     bintrayRepo = 'Respiration'
@@ -7,25 +8,10 @@ ext {
     publishedGroupId = 'com.link184'
     libraryName = 'RespirationAnnotations'
     artifact = 'respiration-annotations'
-
-    libraryDescription = 'Simple way to subscribe to firebase database by rxJava patterns.'
-
-    siteUrl = 'https://github.com/Link184/Respiration'
-    gitUrl = 'https://github.com/Link184/Respiration.git'
-
-    libraryVersion = '0.5.0'
-
-    developerId = 'link184'
-    developerName = 'Eugeniu Tufar'
-    developerEmail = 'eugeniu.tufar@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
 }
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+apply from: '../installv1.gradle'
+apply from: '../bintrayv1.gradle'
