--- a/respiration-compiler/build.gradle
+++ b/respiration-compiler/build.gradle
@@ -8,27 +8,11 @@ ext {
     publishedGroupId = 'com.link184'
     libraryName = 'RespirationCompiler'
     artifact = 'respiration-compiler'
-
-    libraryDescription = 'Simple way to subscribe to firebase database by rxJava patterns.'
-
-    siteUrl = 'https://github.com/Link184/Respiration'
-    gitUrl = 'https://github.com/Link184/Respiration.git'
-
-    libraryVersion = '0.5.0'
-
-    developerId = 'link184'
-    developerName = 'Eugeniu Tufar'
-    developerEmail = 'eugeniu.tufar@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    compile "com.link184:respiration-annotations:${libraryVersion}"
-    api project(':respiration-annotations')
+    compile "com.link184:respiration-annotations:$rootProject.libraryVersion"
     compileOnly 'com.google.auto.service:auto-service:+'
     api 'com.squareup:javapoet:1.9.0'
 }
@@ -60,5 +44,5 @@ publishing {
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: '../installv1.gradle'
 apply from: '../bintrayv1.gradle'
