--- a/respiration/build.gradle
+++ b/respiration/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName rootProject.libraryVersion
     }
     buildTypes {
         release {
@@ -35,28 +35,11 @@ ext {
     publishedGroupId = 'com.link184'
     libraryName = 'Respiration'
     artifact = 'respiration'
-
-    libraryDescription = 'Simple way to subscribe to firebase database by rxJava patterns.'
-
-    siteUrl = 'https://github.com/Link184/Respiration'
-    gitUrl = 'https://github.com/Link184/Respiration.git'
-
-    libraryVersion = '0.5.0'
-
-    developerId = 'link184'
-    developerName = 'Eugeniu Tufar'
-    developerEmail = 'eugeniu.tufar@gmail.com'
-
-    licenseName = 'The Apache Software License, Version 2.0'
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
 }
 
 
 dependencies {
-//    compile("com.link184:respiration-annotations:${libraryVersion}")
-    releaseApi project(':respiration-annotations')
-    debugApi project(':respiration-annotations')
+    compile "com.link184:respiration-annotations:$rootProject.libraryVersion"
 
     // Rx
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -94,6 +77,6 @@ publishing {
     }
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: '../installv1.gradle'
 apply from: '../bintrayv1.gradle'
 
