--- a/respiration-compiler/build.gradle
+++ b/respiration-compiler/build.gradle
@@ -12,7 +12,8 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.link184:respiration-annotations:$rootProject.libraryVersion"
+//    compile "com.link184:respiration-annotations:$rootProject.libraryVersion"
+    compile project(':respiration-annotations')
     compileOnly 'com.google.auto.service:auto-service:+'
     api 'com.squareup:javapoet:1.9.0'
 }
