--- a/respiration/build.gradle
+++ b/respiration/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     api 'com.google.firebase:firebase-storage:11.8.0'
     api 'com.google.firebase:firebase-database:11.8.0'
     api 'com.google.android.gms:play-services-auth:11.8.0'
+
+    // GSON
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 }
 
 publishing {
