--- a/respiration-firebase/build.gradle
+++ b/respiration-firebase/build.gradle
@@ -31,11 +31,11 @@ android {
 
 ext {
     bintrayRepo = 'Respiration'
-    bintrayName = 'Respiration'
+    bintrayName = 'Firebase'
 
     publishedGroupId = 'com.link184'
-    libraryName = 'Respiration'
-    artifact = 'respiration'
+    libraryName = 'RespirationFirebase'
+    artifact = 'respiration-firebase'
 }
 
 
@@ -66,7 +66,7 @@ publishing {
             groupId publishedGroupId
             artifactId artifact
             version libraryVersion
-            artifact file("${rootDir}/respiration/build/outputs/aar/respiration-release.aar")
+            artifact file("${rootDir}/respiration/build/outputs/aar/respiration-firebase-release.aar")
             artifact sourcesJar
             artifact javadocJar
 
