--- a/respiration-core/build.gradle
+++ b/respiration-core/build.gradle
@@ -1,17 +1,12 @@
 apply plugin: 'java-library'
 apply plugin: 'maven-publish'
 
-ext {
-    bintrayRepo = 'Respiration'
-    bintrayName = 'Core'
-
-    publishedGroupId = 'com.link184'
-    libraryName = 'RespirationCore'
-    artifact = 'respiration-core'
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.android.support:support-annotations:27.1.0"
+    // Rx
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'io.reactivex.rxjava2:rxjava:2.1.6'
 }
 
 publishing {
@@ -36,6 +31,15 @@ publishing {
             }
         }
     }
+}
+
+ext {
+    bintrayRepo = 'Respiration'
+    bintrayName = 'Core'
+
+    publishedGroupId = 'com.link184'
+    libraryName = 'RespirationCore'
+    artifact = 'respiration-core'
 }
 
 apply from: '../installv1.gradle'
