--- a/respiration-firebase/build.gradle
+++ b/respiration-firebase/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName rootProject.libraryVersion
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,25 +30,14 @@ android {
     }
 }
 
-ext {
-    bintrayRepo = 'Respiration'
-    bintrayName = 'Firebase'
-
-    publishedGroupId = 'com.link184'
-    libraryName = 'RespirationFirebase'
-    artifact = 'respiration-firebase'
-}
-
-
 dependencies {
     testImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'org.mockito:mockito-core:2.15.0'
 
+//    compile "com.link184:respiration-core:$rootProject.libraryVersion"
 //    compile "com.link184:respiration-annotations:$rootProject.libraryVersion"
+    api project(':respiration-core')
     debugApi project(':respiration-annotations')
-    // Rx
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    api 'io.reactivex.rxjava2:rxjava:2.1.6'
 
     // "Firebase"
     api 'com.google.firebase:firebase-core:11.8.0'
@@ -55,9 +45,15 @@ dependencies {
     api 'com.google.firebase:firebase-storage:11.8.0'
     api 'com.google.firebase:firebase-database:11.8.0'
     api 'com.google.android.gms:play-services-auth:11.8.0'
+}
 
-    // GSON
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+ext {
+    bintrayRepo = 'Respiration'
+    bintrayName = 'Firebase'
+
+    publishedGroupId = 'com.link184'
+    libraryName = 'RespirationFirebase'
+    artifact = 'respiration-firebase'
 }
 
 publishing {
