--- a/respiration-local/build.gradle
+++ b/respiration-local/build.gradle
@@ -27,6 +27,21 @@ android {
     }
 }
 
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+//    compile "com.link184:respiration-core:$rootProject.libraryVersion"
+//    compile "com.link184:respiration-annotations:$rootProject.libraryVersion"
+    api project(':respiration-core')
+    debugApi project(':respiration-annotations')
+
+    // GSON
+    api group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+}
+
 ext {
     bintrayRepo = 'Respiration'
     bintrayName = 'Local'
@@ -34,13 +49,6 @@ ext {
     publishedGroupId = 'com.link184'
     libraryName = 'RespirationLocal'
     artifact = 'respiration-local'
-}
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
 
 publishing {
