--- a/respiration-firebase/build.gradle
+++ b/respiration-firebase/build.gradle
@@ -39,12 +39,16 @@ dependencies {
     api project(':respiration-core')
     debugApi project(':respiration-annotations')
 
+    // Rx
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'io.reactivex.rxjava2:rxjava:2.1.10'
+
     // "Firebase"
-    api 'com.google.firebase:firebase-core:11.8.0'
-    api 'com.google.firebase:firebase-auth:11.8.0'
-    api 'com.google.firebase:firebase-storage:11.8.0'
-    api 'com.google.firebase:firebase-database:11.8.0'
-    api 'com.google.android.gms:play-services-auth:11.8.0'
+    api 'com.google.firebase:firebase-core:12.0.0'
+    api 'com.google.firebase:firebase-auth:12.0.0'
+    api 'com.google.firebase:firebase-storage:12.0.0'
+    api 'com.google.firebase:firebase-database:12.0.0'
+    api 'com.google.android.gms:play-services-auth:12.0.0'
 }
 
 ext {
@@ -62,7 +66,7 @@ publishing {
             groupId publishedGroupId
             artifactId artifact
             version libraryVersion
-            artifact file("${rootDir}/respiration/build/outputs/aar/respiration-firebase-release.aar")
+            artifact file("${rootDir}/respiration-firebase/build/outputs/aar/respiration-firebase-release.aar")
             artifact sourcesJar
             artifact javadocJar
 
