--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -56,7 +56,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     implementation project(':respiration-core')
-    implementation project(':respiration-local')
+    implementation (project(':respiration-local'), {
+        exclude module: 'respiration-firebase-junk'
+    })
     implementation project(':respiration-firebase')
     annotationProcessor project(':respiration-compiler')
 }
