--- a/respiration-compiler/build.gradle
+++ b/respiration-compiler/build.gradle
@@ -3,9 +3,9 @@ apply plugin: 'maven-publish'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    compile "com.link184:respiration-annotations:$rootProject.libraryVersion"
-    compile project(':respiration-annotations')
-    compileOnly 'com.google.auto.service:auto-service:+'
+    compile "com.link184:respiration-annotations:$rootProject.libraryVersion"
+//    implementation project(':respiration-annotations')
+    implementation 'com.google.auto.service:auto-service:+'
     api 'com.squareup:javapoet:1.9.0'
 }
 
