--- a/respiration-core/build.gradle
+++ b/respiration-core/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven-publish'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:support-annotations:27.1.0"
+    api "com.android.support:support-annotations:27.1.0"
     // Rx
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.10'
