--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':respiration-firebase', ':sample', ':respiration-annotations', ':respiration-compiler', ':respiration-local', ':respiration-core'
+include ':respiration-firebase', ':sample', ':respiration-annotations', ':respiration-compiler', ':respiration-local', ':respiration-core', ':respiration-firebase-junk'
