--- a/respiration-core/build.gradle
+++ b/respiration-core/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'maven-publish'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api "com.android.support:support-annotations:27.1.1"
+//    compile "com.link184:respiration-firebase-junk:$rootProject.libraryVersion"
     api project(':respiration-firebase-junk')
     // Rx
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
