--- a/respiration-core/build.gradle
+++ b/respiration-core/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'maven-publish'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api "com.android.support:support-annotations:27.1.1"
+    api "androidx.annotation:annotation:1.0.0"
 //    compile "com.link184:respiration-firebase-junk:$rootProject.libraryVersion"
     api project(':respiration-firebase-junk')
     // Rx
